2012-12-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Insert a missing snprintf format effector.

	* src/pkgnget.cpp (pkgDownloadMeterGUI::Update): Add omitted '%'
	format specifier, in "%%", for formatting percentage-complete value.
	Rename "size_buf" automatic variable as "buf"; this results in shorter
	source lines, and consequently a tidier source code layout.
	(pkgDownloadMeterGUI::ResetGUI): Likewise s/size_buf/buf/

2012-12-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add a missing header reference.

	* src/approot.h: Include stdint.h; this ensures that wchar_t is
	properly typedef'd, before attempting to use it.

2012-12-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Make a clone of the package menu available as a pop-up.

	* src/guimain.h (AppWindowMaker::SelectPackageAction): New private
	method; declare it.

	* src/pkgdata.cpp (AppWindowMaker::SelectPackageAction): Implement it.
	(AppWindowMaker::OnNotify) [ID_PACKAGE_LISTVIEW]: Use it.

2012-12-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Improve conditionally enabled state manipulation for menu items.

	* src/guidata.rc (IDM_REPO_APPLY): Set its initial state as GRAYED.

	* src/pkgdata.cpp (AppWindowMaker::UpdatePackageMenuBindings):
	[IDM_PACKAGE_REINSTALL]: Always leave it GRAYED; this is a temporary
	provision, until the GUI is updated to support "reinstall" capability.
	[IDM_REPO_APPLY && !(EnumeratePendingActions > 0)]: Make it GRAYED.
	[IDM_REPO_APPLY && (EnumeratePendingActions > 0)]: Enable it.

2012-12-11  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Implement GUI bindings for processing a schedule of actions.

	* src/guimain.h (IDD_DMH_CONSOLE): New resource ID; define it.
	(IDD_APPLY_EXECUTE): New dialogue template resource ID; define it.
	(AppWindowMaker::ExecuteScheduledActions): New method; declare it.

	* src/guidata.rc (IDD_APPLY_EXECUTE): Implement dialogue template.
