@@ -1,5 +1,15 @@
 2012-12-14  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
+	Implement some additional permanent debugging support.
+
+	* src/pkgdeps.cpp (pkgXmlDocument::ResolveDependencies):
+	[DEBUG_TRACE_DEPENDENCIES]: Enable DMH digest mode for messages.
+
+	* src/tarproc.cpp (pkgTarArchiveInstaller::ProcessDataStream):
+	[DEBUG_TRACE_TRANSACTIONS]: Add logging of installed file path names.
+
+2012-12-14  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
 	Insert a missing snprintf format effector.
 
 	* src/pkgnget.cpp (pkgDownloadMeterGUI::Update): Add omitted '%'
